--- a/01 - Drum Kit/app.css
+++ b/01 - Drum Kit/app.css
@@ -10,6 +10,7 @@ html {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  height: 100vh;
 }
 
 .keys {
@@ -51,4 +52,18 @@ kbd {
   text-transform: uppercase;
   letter-spacing: 0.1rem;
   color: #ffc600;
+}
+
+.links {
+  top: 0;
+  right: 0;
+  text-align: right;
+  margin: 2.5rem;
+  position: absolute
+}
+
+.links > a {
+  color: white;  
+  margin-left: 1rem;
+  text-decoration: none;
 }
