--- a/03 - Playing with CSS Variables and JS/app.css
+++ b/03 - Playing with CSS Variables and JS/app.css
@@ -20,7 +20,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 40%;
 }
 
 .hl {
@@ -68,7 +68,7 @@ input {
   width: 100px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .controls {
     display: flex;
     flex-direction: column;
@@ -81,5 +81,9 @@ input {
     align-items: center;
     flex-wrap: wrap;
     margin: 20px;
+  }
+
+  img {
+    width: 75%;
   }
 }
