--- a/03 - Playing with CSS Variables and JS/app.css
+++ b/03 - Playing with CSS Variables and JS/app.css
@@ -87,3 +87,23 @@ input {
     width: 75%;
   }
 }
+
+.links {
+  top: 0;
+  right: 0;
+  text-align: right;
+  margin: 2.5rem;
+  position: absolute;
+  font-size: 16px;
+}
+
+.links > a {
+  color: white;
+  margin-left: 1rem;
+  text-decoration: none;
+}
+
+.links > a:hover {
+  color: #ffc600;
+  transition: all 0.5s ease;
+}
