--- a/04 - Array Cardio Day 1/app.css
+++ b/04 - Array Cardio Day 1/app.css
@@ -10,17 +10,37 @@ body {
     #000000,
     #eb5757
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .container {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 .title {
-    color: white;
-    font-size: 32px;
+  color: white;
+  font-size: 32px;
+}
+
+.links {
+  top: 0;
+  right: 0;
+  text-align: right;
+  margin: 2.5rem;
+  position: absolute;
+  font-size: 16px;
+}
+
+.links > a {
+  color: white;
+  margin-left: 1rem;
+  text-decoration: none;
+}
+
+.links > a:hover {
+  color: #ffc600;
+  transition: all 0.5s ease;
 }
