--- a/05 - Flex Panel Gallery/app.css
+++ b/05 - Flex Panel Gallery/app.css
@@ -140,3 +140,23 @@ body {
   flex: 5;
   font-size: 40px;
 }
+
+.links {
+  top: 0;
+  right: 0;
+  text-align: right;
+  margin: 1.5rem;
+  position: absolute;
+  font-size: 16px;
+}
+
+.links > a {
+  color: white;
+  margin-left: 1rem;
+  text-decoration: none;
+}
+
+.links > a:hover {
+  color: #ffc600;
+  transition: all 0.5s ease;
+}
